--- a/conda.yml
+++ b/conda.yml
@@ -4,9 +4,11 @@ channels:
   - defaults
 dependencies:
   - python=3.10
+  - numpy=1.24
   - pyyaml
   - hydra-core=1.3.2
   - pip=23.3.1
   - pip:
       - mlflow==2.8.1
       - wandb==0.16.0
+    
