--- a/src/data_check/conda.yml
+++ b/src/data_check/conda.yml
@@ -3,10 +3,10 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.10.0
-  - pandas=2.1.3
-  - pytest=6.2.2
-  - scipy=1.5.2
+  - python=3.10
+  - pandas=2.0.3  # Adjusted version
+  - pytest=7.4.2  # Adjusted version
+  - scipy=1.11.3
   - pip=23.3.1
   - pip:
       - mlflow==2.8.1
